Revision history for VCtools

0.15
	*	bug fixes:
		`vc commands` no longer has "FILL ME IN" for some commands
		`vc commit` now does a `verify = project`
		`vc unstage` now accepts files (and therefore doesn't unstage everything when you request just one file)
		`vc` no longer repeatedly tries to run `vctools-prereq-verify` when what's missing is an internal module
	*	modified commands:
		vc info : can now ask for `def:command` or `def:%info`
		vc info : can now do `vc info list` to get all possible keys (args to `vc info`)
					(request from Steve Caldwell)
		vc help : now advises people to try `vc info def:command`
		vc shell-complete : now provides completion for `vc info`
	*	base command improvements:
		vc help : rewritten so we have our own version (not relying on default from App::Cmd any more)
		vc DEBUG=x cmd : new debugging mode controls Debuggit's DEBUG level + automatically turns on --debug
	*	config file improvements:
		new directive: CodePrefix

0.14	2014-04-27		10aefe9b72

	*	bug fixes:
		`vc help` with no args now works properly again
	*	new global switches:
		--yes
	*	new commands:
		vc unbranch
		vc commit-fix
		vc shell-complete
	*	modified global switches:
		--pretend: when `verify = clean` fails, only print a message, don't actually exit
	*	modified commands:
		vc commit -F : same as `vc commit-fix`
		vc commands : much more consistent about what commands are listed
		vc commands : also more consistent about what commands are "structural"
		vc info : fixed help message
		vc info : now consistenly using newlines for separators; added `--oneline` switch to use spaces instead
	*	modified Git implementions:
		%staged_files : consider additions and deletions as well as mods
		vc unstage : no longer throws bogus error
		vc resolved : now actually works
	*	new %info methods:
		%me
	*	base command improvements:
		added version variable for `vc version` or `--version` switch
			(assuming new enough version of App::Cmd)
	*	code expansion improvements: